--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,7 +37,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   jaffle_shop:
-    staging:
-      +materialized: view
-    marts:
-      +materialized: table
+    jaffle_shop:
+      staging:
+        +materialized: view
+      marts:
+        +materialized: table
